; ModuleID = '/home/carl/AnghaBench/git/extr_diff.c_diff_opt_find_renames.c'
source_filename = "/home/carl/AnghaBench/git/extr_diff.c_diff_opt_find_renames.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { i32, %struct.diff_options* }
%struct.diff_options = type { i32, i32 }

@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [23 x i8] c"invalid argument to %s\00", align 1
@DIFF_DETECT_RENAME = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @diff_opt_find_renames to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diff_opt_find_renames(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.option*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.diff_options*, align 8
  store %struct.option* %0, %struct.option** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.option*, %struct.option** %5, align 8
  %10 = getelementptr inbounds %struct.option, %struct.option* %9, i32 0, i32 1
  %11 = load %struct.diff_options*, %struct.diff_options** %10, align 8
  store %struct.diff_options* %11, %struct.diff_options** %8, align 8
  %12 = load i32, i32* %7, align 4
  %13 = call i32 @BUG_ON_OPT_NEG(i32 %12)
  %14 = load i8*, i8** %6, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i64 0, i64 0), i8** %6, align 8
  br label %17

17:                                               ; preds = %16, %3
  %18 = call i32 @parse_rename_score(i8** %6)
  %19 = load %struct.diff_options*, %struct.diff_options** %8, align 8
  %20 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %19, i32 0, i32 1
  store i32 %18, i32* %20, align 4
  %21 = load i8*, i8** %6, align 8
  %22 = load i8, i8* %21, align 1
  %23 = sext i8 %22 to i32
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %31

25:                                               ; preds = %17
  %26 = call i32 @_(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0))
  %27 = load %struct.option*, %struct.option** %5, align 8
  %28 = getelementptr inbounds %struct.option, %struct.option* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 8
  %30 = call i32 @error(i32 %26, i32 %29)
  store i32 %30, i32* %4, align 4
  br label %35

31:                                               ; preds = %17
  %32 = load i32, i32* @DIFF_DETECT_RENAME, align 4
  %33 = load %struct.diff_options*, %struct.diff_options** %8, align 8
  %34 = getelementptr inbounds %struct.diff_options, %struct.diff_options* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 4
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %31, %25
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i32 @parse_rename_score(i8**) #1

declare dso_local i32 @error(i32, i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
